(menhir
 (modules tokens)
 (flags --only-tokens))

(menhir
 (modules tokens parser)
 (merge_into parser)
 (flags --external-tokens Tokens --dump --explain --unused-tokens))

(ocamllex lexer)

(menhir
 (modules core_tokens)
 (flags --only-tokens))

(menhir
 (modules core_tokens core_parser)
 (merge_into core_parser)
 (flags --external-tokens Core_tokens --dump --explain --unused-tokens))

(ocamllex core_lexer)

(library
 (name bite_comp)
 (preprocess (pps ppx_deriving.show ppx_deriving.ord))
 (modules
  lexer
  tokens
  parser
  syntax
  types
  c
  core
  core_lexer
  core_tokens
  core_parser
  ))

(env
  (dev
    (flags (:standard -warn-error -A -g))))
